test/files/neg/t1960.check
t1960.scala:2: error: parameter 'vr' requires field but conflicts with variable vr in trait T
class C(vr: Int, vl: Int) extends T { def ref = vr + vl }
        ^
t1960.scala:2: error: parameter 'vl' requires field but conflicts with value vl in trait T
class C(vr: Int, vl: Int) extends T { def ref = vr + vl }
                 ^
two errors found
